--- a/chart.html
+++ b/chart.html
@@ -40,13 +40,16 @@
         /* 调整canvas大小以适应卡片 */
         canvas {
             max-width: 100%;
-            height: 300px; /* 固定高度以确保一致性 */
+            height: 300px;
+            /* 固定高度以确保一致性 */
         }
+
         .m-gamepadItemJoysticks {
             background: none;
             padding: 20px;
             margin-left: 333px;
         }
+
         button {
             padding: 10px;
             margin: 5px;
@@ -67,7 +70,9 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3"><font _mstmutation="1" _msttexthash="10666266" _msthash="1">SSR团队</font></div>
+                <div class="sidebar-brand-text mx-3">
+                    <font _mstmutation="1" _msttexthash="10666266" _msthash="1">SSR团队</font>
+                </div>
             </a>
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
@@ -113,22 +118,24 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                  <!-- Sidebar Toggle (Topbar) -->
-                  <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                      <i class="fa fa-bars"></i>
-                  </button>
-                  <!-- Topbar Navbar -->
-                  <ul class="navbar-nav ml-auto">
-                      <!-- 可添加更多内容 -->
-                      <li class="nav-item dropdown no-arrow">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small" _msttexthash="22648327" _msthash="55">哈威SSR团队研发</span>
-                            <img class="img-profile rounded-circle" src="img/picture.png">
-                        </a>
-                    </li>
-                  </ul>
-              </nav>
-                 <!-- End of Topbar -->
+                    <!-- Sidebar Toggle (Topbar) -->
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars"></i>
+                    </button>
+                    <!-- Topbar Navbar -->
+                    <ul class="navbar-nav ml-auto">
+                        <!-- 可添加更多内容 -->
+                        <li class="nav-item dropdown no-arrow">
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" _msttexthash="22648327"
+                                    _msthash="55">SSR团队研发</span>
+                                <img class="img-profile rounded-circle" src="img/picture.png">
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
@@ -138,7 +145,7 @@
                         <h1 class="h3 mb-0 text-gray-800">各项数值展示</h1>
                     </div>
 
-                    
+
 
                     <!-- Content Row -->
 
@@ -219,7 +226,7 @@
                     </div>
 
                     <!-- Content Row -->
-                    
+
                 </div>
                 <!-- /.container-fluid -->
 
@@ -286,6 +293,7 @@
 
 </body>
 <script>
-  
+
 </script>
+
 </html>
