--- a/XBox.html
+++ b/XBox.html
@@ -99,6 +99,12 @@
                     <span _msttexthash="9967711" _msthash="9">水下仿真插入</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="camera.html">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span _msttexthash="5055388" _msthash="5">摄像头读取</span>
+                </a>
+            </li>
         </ul>
         <!-- End of Sidebar -->
 
