--- a/tables.html
+++ b/tables.html
@@ -108,6 +108,12 @@
                     <span _msttexthash="5055388" _msthash="5">摄像头读取</span>
                 </a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="http://localhost:8001/vendor/three.js-r161/examples/sinmple.html">
+                    <i class="fas fa-fw fa-camera"></i>
+                    <span>模型展示</span>
+                </a>
+            </li>
         </ul>
         <!-- End of Sidebar -->
 
