--- a/camera.html
+++ b/camera.html
@@ -124,6 +124,12 @@
                     <span>摄像头读取</span>
                 </a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="http://localhost:8001/vendor/three.js-r161/examples/sinmple.html">
+                    <i class="fas fa-fw fa-camera"></i>
+                    <span>模型展示</span>
+                </a>
+            </li>
         </ul>
 
         <!-- Content Wrapper -->
