--- a/first_page.html
+++ b/first_page.html
@@ -35,7 +35,7 @@
         <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
           <!-- Sidebar Brand -->
-          <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+          <a class="sidebar-brand d-flex align-items-center justify-content-center" href="first_page.html">
               <div class="sidebar-brand-icon rotate-n-15">
                   <i class="fas fa-laugh-wink"></i>
               </div>
@@ -78,6 +78,12 @@
             <a class="nav-link collapsed" href="camera.html">
                 <i class="fas fa-fw fa-cog"></i>
                 <span _msttexthash="5055388" _msthash="5">摄像头读取</span>
+            </a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="http://localhost:8001/vendor/three.js-r161/examples/sinmple.html">
+                <i class="fas fa-fw fa-camera"></i>
+                <span>模型展示</span>
             </a>
         </li>
       </ul>
