--- a/first_page.html
+++ b/first_page.html
@@ -81,7 +81,7 @@
             </a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="http://localhost:8001/vendor/three.js-r161/examples/sinmple.html">
+            <a class="nav-link" href="http://localhost:8001/vendor/three.js-r161/examples/simple.html">
                 <i class="fas fa-fw fa-camera"></i>
                 <span>模型展示</span>
             </a>
